--- a/FE/src/components/Navbar/Navbar.css
+++ b/FE/src/components/Navbar/Navbar.css
@@ -86,9 +86,13 @@
     min-height: 10px;
     background-color: tomato;
     border-radius: 5px;
-    top: -8px;
-    right: -8px;
+    top: 8px;
+    right: 5px;
 }
+
+/* search */
+
+
 
 @media (max-width: 1050px) {
     .navbar .logo {
