--- a/FE/src/components/ProductPage/ShopSideNav.css
+++ b/FE/src/components/ProductPage/ShopSideNav.css
@@ -1,10 +1,19 @@
-.product-banner {
+/* .product-banner {
     
     background: linear-gradient(180deg, #fde1ff,#e1ffea22 60%);
     display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 335px;
     
-}
+} */
 
+/* .product-banner img{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 335px;
+} */
 .product-slide{
     flex: 0.3;
 
