--- a/FE/src/components/Footer/Footer.css
+++ b/FE/src/components/Footer/Footer.css
@@ -9,6 +9,10 @@
     padding-top: 80px;
 }
 
+.footer-social-icons{
+    display: flex;
+}
+
 .footer-social-icons img {
     width: 40px;
     margin-right: 15px;
