--- a/FE/src/components/Header/Header.css
+++ b/FE/src/components/Header/Header.css
@@ -1,201 +1,165 @@
 .header-contents {
-  animation: fadeIn 3s;
-  margin-left: 5rem;
-  /* margin-bottom: 14.5rem; */
+    animation: fadeIn 3s;
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; */
 }
 
 .header-contents h1 {
-  font-size: 185px;
-  font-weight: 600;
+    font-size: 165px;
+
 }
 
 .header-contents h2 {
-  font-size: 128px;
-  font-weight: 500;
-  color: #ff796d;
-  height: 50px;
-  position: absolute;
-  width: 200px;
-  z-index: -1;
+    font-size: 128px;
+    color: #FF796D;
+    height: 50px;
+    position: absolute;
+    width: 200px;
+    z-index: -1;
 }
 
 .header-contents .cat-item-1 {
-  width: 15rem;
-  margin-left: 3rem;
-  margin-top: 17rem;
+    width: 15rem;
+    margin-right: -15rem;
+    margin-left: 5rem;
 }
 
 .header-contents .cat-item-2 {
-  width: 30rem;
-  margin-left: 24rem;
-  margin-top: -44.5rem;
+    width: 30rem;
+    margin-left: 25rem;
+    margin-top: -4rem;
 }
 
 .header-contents .cat-item-3 {
-  width: 15rem;
-  margin-left: 59.5rem;
-  margin-top: -18.5rem;
+    width: 15rem;
+    margin-left: 5rem;
 }
-/* .items .cat-item-1{
-    width: 10rem;
-    height: 240px;
-}
-.items .cat-item-3{
-    height: 240px;
-}
-
-.items{
-    width: 15rem; 
-    display: flex;
-    justify-content: space-between;
-
-} */
 
 .header-contents p {
-  position: absolute;
-  bottom: 40%;
-  right: 19%;
+    position: absolute;
+    bottom: 40%;
+    right: 16%;
 }
 
 .header-contents .phone {
-  position: absolute;
-  bottom: 32.5%;
-  right: 23.5%;
-  cursor: pointer;
+    position: absolute;
+    bottom: 32.5%;
+    right: 24.5%;
+    cursor: pointer;
 }
 
 .header-contents .call {
-  position: absolute;
-  bottom: 33.5%;
-  right: 16.5%;
-  text-decoration: underline;
-  cursor: pointer;
-  transition: all 0.1s;
-}
-
-.header-contents .contact:hover {
-  color: #ff796d;
+    position: absolute;
+    bottom: 33.5%;
+    right: 16.5%;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .header-contents button {
-  position: absolute;
-  bottom: 32.5%;
-  right: 28%;
-  background: transparent;
-  font-size: 16px;
-  color: #49557e;
-  /* background-color: #FF9494; */
-  border: 1px solid #ff9494;
-  padding: 10px 30px;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: 0.3s;
+    position: absolute;
+    bottom: 32.5%;
+    right: 28%;
+    background: transparent;
+    font-size: 16px;
+    color: #49557e;
+    /* background-color: #FF9494; */
+    border: 1px solid #FF9494;
+    padding: 10px 30px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 .header-contents button:hover {
-  background-color: #ff9494;
-  box-shadow: rgb(255, 132, 204) 0px 7px 29px 0px;
+    background-color: #FF9494;
+    box-shadow: rgb(255, 132, 204) 0px 7px 29px 0px;
 }
 
+
 .header-contents .prod-item-1 {
-  border-radius: 6rem;
-  width: 4rem;
-  position: absolute;
-  bottom: 50%;
-  right: 32.5%;
-  cursor: pointer;
+    border-radius: 6rem;
+    width: 4rem;
+    position: absolute;
+    bottom: 50%;
+    right: 32.5%;
+    cursor: pointer;
 }
 
 .header-contents .prod-item-2 {
-  width: 4rem;
-  position: absolute;
-  bottom: 50%;
-  right: 26%;
-  cursor: pointer;
+    width: 4rem;
+    position: absolute;
+    bottom: 50%;
+    right: 26%;
+    cursor: pointer;
 }
 
 .header-contents .prod-item-3 {
-  width: 4.3rem;
-  position: absolute;
-  bottom: 50%;
-  right: 19.5%;
-  cursor: pointer;
+    width: 4.3rem;
+    position: absolute;
+    bottom: 50%;
+    right: 19.5%;
+    cursor: pointer;
 }
 
-@media (max-width: 1536px) and (max-height: 713.6px) {
-  .header {
-    margin-left: 1.5rem;
-  }
+@media (max-width: 1536px) and (max-height: 713.60px){
 
-  .header-contents h1 {
-    font-size: 138px;
-    margin-left: -1rem;
-  }
+    .header-contents h1{
+        font-size: 125px;
+    }
+    .header-contents h2{
+        font-size: 100px;
+    }
 
-  .header-contents h2 {
-    font-size: 100px;
-  }
+    .header-contents .cat-item-1{
+        width: 10rem;
+        top: 30%;
+    }
+    .header-contents .cat-item-2{
+        width: 20rem;
+        padding-top: 2rem;
+    }
+    .header-contents .cat-item-3{
+        width: 10rem;
+    }
 
-  .header-contents .cat-item-1 {
-    width: 10rem;
-    margin-left: 3rem;
-    margin-top: 10.5rem;
-    margin-bottom: -32rem;
-  }
+    .header-contents .prod-item-1 {
+        width: 3rem;
+        top: 45%;
+        right: 35%;
+    }
+    .header-contents .prod-item-2 {
+        width: 3rem;
+        top: 45%;
+        right: 29%;
+    }
+    .header-contents .prod-item-3 {
+        width: 3.2rem;
+        top: 45%;
+        right: 23%;
+    }
+    
+    .header-contents p{
+        font-size: 10px;
+        right: 23%;
+        top: 54%;
+    }
 
-  .header-contents .cat-item-2 {
-    width: 20rem;
-    padding-top: 2.5rem;
-    margin-left: 20rem;
-    margin-top: -30rem;
-  }
-
-  .header-contents .cat-item-3 {
-    width: 10rem;
-    margin-left: 46rem;
-    margin-top: -12.1rem;
-  }
-
-  .header-contents .prod-item-1 {
-    width: 3rem;
-    top: 45%;
-    right: 31%;
-  }
-
-  .header-contents .prod-item-2 {
-    width: 3rem;
-    top: 45%;
-    right: 25%;
-  }
-
-  .header-contents .prod-item-3 {
-    width: 3.2rem;
-    top: 45%;
-    right: 19%;
-  }
-
-  .header-contents p {
-    font-size: 10px;
-    right: 21%;
-    top: 54%;
-  }
-
-  .header-contents .call {
-    right: 18.5%;
-    top: 63%;
-    bottom: 33.5%;
-  }
-
-  .header-contents .phone {
-    width: 1.5rem;
-    right: 24%;
-    top: 62.5%;
-  }
-
-  .header-contents button {
-    font-size: 15px;
-    padding: 7px 10px 7px 10px;
-    bottom: 33.5%;
-    right: 27.5%;
-  }
+    .header-contents .call{
+        right:23%;
+        top: 63%;
+    }
+    .header-contents .phone{
+        width: 1.5rem;
+        right: 29.5%;
+        top: 62.5%;
+    }
+    .header-contents button{
+        font-size: 15px;
+        padding: 7px;
+        bottom: 33.5%;
+        right: 33%;
+    }
 }
