Update BE FE file

--- a/FE/src/components/PageProduct/ProductList.css
+++ b/FE/src/components/PageProduct/ProductList.css
@@ -1,29 +1,266 @@
 
-
-.banner-Un img{
-    font-size: 0rem;
-    width: 100%;
-    height: 87%;
-
+svg.cart-icon {
+    margin-left: 43%;
 }
-
-
-
-
-.col-sm-4{
-    width: 25%;
-    border-right-style: solid;
+.align-items-center.row {
+    margin-left: 105%;
+    margin-top: -32%;
+    font-size: 113%;
 }
-.div#list-group-tabs-example-tabpane-\#link1 {
+button#demo-multiple-checkbox-label {
+    color: black;
+    background-color: white;
+    font-size: 120%;
+}
+label {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+  }
+
+  .sort {
+    margin-top: 0em;
+  }
+  
+
+  .Dropdown-Item {
+    font-size: 0.9em;
+  }
+  label#demo-multiple-checkbox-label {
+    margin-top: 38px;
+}
+.flex-pr {
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
     justify-content: space-between;
-}
-.container {
-    display: flex;
+    align-items: center;
     flex-direction: column;
 }
-.row{
-    margin-top: 22px
+
+
+
+ .card {
+    width: 300px;
+    height: 400px;
+    padding: 0.8em;
+    background: #f5f5f5;
+    position: relative;
+    overflow: visible;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+} 
+   
+   .card-img {
+    background-color: #ffcaa6;
+    height: 40%;
+    width: 100%;
+    border-radius: .5rem;
+    transition: .3s ease;
+   }
+   
+   .card-info {
+    padding-top: 22%;
+   }
+   
+   svg {
+    width: 20px;
+    height: 20px;
+   }
+   .card-footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    margin-top: 23px;
+    border-top: 1px solid #ddd;
 }
+   
+   /*Text*/
+   .text-title {
+    font-weight: 900;
+    font-size: 1.2em;
+    line-height: 1.5;
+   }
+   
+   .text-body {
+    font-size: .9em;
+    padding-bottom: 14px;
+   }
+   
+   /*Button*/
+   .card-button {
+    border: 1px solid #252525;
+    display: flex;
+    padding: .3em;
+    cursor: pointer;
+    border-radius: 50px;
+    transition: .3s ease-in-out;
+   }
+   
+   /*Hover*/
+   .card-img:hover {
+    transform: translateY(-10%);
+    box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+   }
+   
+   .card-button:hover {
+    border: 1px solid #ffcaa6;
+    background-color: #ffcaa6;
+   }
+   nav.MuiTypography-root.MuiTypography-body1.MuiBreadcrumbs-root.breadcrum.css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root {
+    border: 1px solid #a89393;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    background-color: #ffcbcb;
+}
+
+
+.article-wrapper {
+    position: relative;
+    margin: 10px;
+    overflow: hidden;
+  }
+  
+  .container-project {
+    position: relative;
+    overflow: hidden;
+    border-radius: 15px;
+  }
+  
+  .project-info {
+    padding: 10px;
+  }
+  
+  .flex-pr {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .project-title {
+    font-weight: bold;
+  }
+  @media (min-width: 1536px) {
+    .MuiGrid-root.MuiGrid-item.MuiGrid-grid-xs-12.MuiGrid-grid-sm-6.MuiGrid-grid-md-4.css-11l5t4l-MuiGrid-root {
+        -webkit-flex-basis: 33.333333%;
+        -ms-flex-preferred-size: 33.333333%;
+        flex-basis: 33.333333%;
+        -webkit-box-flex: 0;
+        -webkit-flex-grow: 0;
+        -ms-flex-positive: 0;
+        flex-grow: 0;
+        max-width: 24.333333%;
+    }
+    .MuiGrid-root.MuiGrid-container.MuiGrid-spacing-xs-2.css-mhc70k-MuiGrid-root {
+        width: calc(104% + 8px);
+        margin-left: -28px;
+    }
+
+}
+@media (max-width: 1280px) {
+    nav.MuiList-root.MuiList-padding.MuiList-subheader.css-i7rae6-MuiList-root {
+        width: 86%;
+    }
+    input.form-range {
+        width: 86%;
+    }
+    .css-mhc70k-MuiGrid-root>.MuiGrid-item {
+        padding-left: 1px;
+    }
+    .MuiGrid-root.MuiGrid-container.MuiGrid-spacing-xs-2.product.css-mhc70k-MuiGrid-root {
+        margin-top: 1%;
+        margin-left: 0%;
+        gap: 0px;
+    }
+    .col-auto {
+        flex: 0 0 auto;
+        width: auto;
+        margin-left: -3%;
+    }
+    .MuiGrid-root.MuiGrid-item.css-13i4rnv-MuiGrid-root {
+        display: flex;
+        width: 229px;
+        margin-left: -6%;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-content: center;
+    }
+    .card {
+        width: 300px;
+        height: 400px;
+        padding: 0.8em;
+        background: #f5f5f5;
+        position: relative;
+        overflow: visible;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    } 
+}
+@media (max-width: 1024px) {
+    nav.MuiList-root.MuiList-padding.MuiList-subheader.css-i7rae6-MuiList-root {
+        width: 73%;
+    }
+    input.form-range {
+        width: 74%;
+    }
+    .css-mhc70k-MuiGrid-root>.MuiGrid-item {
+        padding-left: 1px;
+    }
+    .MuiGrid-root.MuiGrid-container.MuiGrid-spacing-xs-2.product.css-mhc70k-MuiGrid-root {
+        margin-top: 1%;
+        margin-left: -11%;
+        gap: 0px;
+        width: calc(102% + 16px);
+    }
+    .col-auto {
+        flex: 0 0 auto;
+        width: auto;
+        margin-left: -4%;
+    }
+    .card {
+        width: 241px;
+        height: 372px;
+        padding: 0.6em;
+        background: #f5f5f5;
+        position: relative;
+        overflow: visible;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        margin-left: 74px;
+    }
+}
+@media (max-width: 900px) {
+    nav.MuiList-root.MuiList-padding.MuiList-subheader.css-i7rae6-MuiList-root {
+        width: 73%;
+    }
+    input.form-range {
+        width: 74%;
+    }
+    .css-mhc70k-MuiGrid-root>.MuiGrid-item {
+        padding-left: 1px;
+    }
+    .MuiGrid-root.MuiGrid-container.MuiGrid-spacing-xs-2.product.css-mhc70k-MuiGrid-root {
+        margin-top: 1%;
+        margin-left: -11%;
+        gap: 0px;
+    }
+    .col-auto {
+        flex: 0 0 auto;
+        width: auto;
+        margin-left: -4%;
+    }
+    .card {
+        width: 200px;
+        height: 300px;
+        padding: 0.4em;
+        background: #f5f5f5;
+        position: relative;
+        overflow: visible;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    }
+    .text-title {
+        font-weight: 900;
+        font-size: 1.2em;
+        line-height: 0;
+    }
+}
+
+
+  
