--- a/FE/src/components/Breadcrum/Breadcrum.css
+++ b/FE/src/components/Breadcrum/Breadcrum.css
@@ -4,3 +4,9 @@
     border-radius: 6px;
     margin-top: 30px;
 }
+.nav.MuiTypography-root.MuiTypography-body1.MuiBreadcrumbs-root.breadcrum.css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root {
+    border: 1px solid #a89393;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    background-color: #ffcbcb;
+}
