--- a/FE/src/components/RelatedProducts/RelatedProducts.css
+++ b/FE/src/components/RelatedProducts/RelatedProducts.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 28px;
-    height: 51vh;
+    height: 50vh;;
 }   
 .relatedproducts h1{
     color: #171717;
