--- a/FE/src/pages/Product/Product.css
+++ b/FE/src/pages/Product/Product.css
@@ -1,14 +1,16 @@
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-  
-  .breakdance {
-    background-color: #f8f9fa; 
-    padding: 20px; 
-  }
+   */
+   .breakdance {
+    background-color: #f8f9fa;
+    padding: 20px;
+    width: 90%;
+    margin: auto;
+}
   
   .bde-section {
     margin: 20px 0; 
@@ -59,17 +61,17 @@
   }
   
   .breakdance-image {
-    max-width: 100%;
+    max-width: 80%;
     height: auto; 
   }
   
   .breakdance-image-container {
-    width: 100%;
+    width: 90%;
     overflow: hidden; 
   }
   
   .breakdance-image-object {
-    width: 100%;
+    width: 90%;
     height: auto;
   }
   
