--- a/FE/src/components/Navbar/Navbar.css
+++ b/FE/src/components/Navbar/Navbar.css
@@ -2,14 +2,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2px;
-    margin-bottom: 1rem;
-    position: -webkit-sticky; 
     position: sticky;
     top: 0;
     z-index: 10;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    background-color: white;
+    background: white;
 }
 
 .navbar1.hidden {
@@ -24,6 +21,7 @@
 }
 
 .navbar-menu {
+    cursor: pointer;
     display: flex;
     margin: auto;
     list-style: none;
@@ -78,7 +76,7 @@
     
 }
 
-.navbar .user {
+.navbar1 .user {
     width: 23.5px;
     right: -55px;
     top: 12px;
